# ta-agent

./: .env  .gitignore  README.md  TA_CHAT_README.md  main.py  requirements.txt  setup.py  ta_chat.html  ta_chat_server.py
backend/: .gitignore  canvasuagents.py  main-test.py  main.py  requirements.txt  ta_chat_server.py
backend/Discord/: direct_discord_test.py  discord_agent.py  discord_api.py  discord_openai.py  discord_read.py  discord_worker_agent.py  orchestrator.py  test_discord.py  test_discord_openai.py
backend/agents_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/ai_check_agent/: ai_checking.py
backend/canvas_agent/: openai_testing.py  openai_tools.py
backend/canvas_agent/canvas/: canvas_announcements.py  canvas_assignments.py  canvas_calendars.py  canvas_courses.py  canvas_enrollments.py  canvas_files.py  canvas_gradebook_history.py  canvas_groups.py  canvas_groups_testing.py  canvas_history.py  canvas_late_policy.py  (+8 more)
backend/discord_agent/: discord_agent.py  discord_api.py  discord_openai.py  discord_read.py  discord_write.py  main.py  test_discord_read.py
backend/fastapi-backend/: README.md  discord_1.py  discord_testing.py  main.py  pyproject.toml
backend/mybackend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/openai/: discord_testing.py  openai_testing.py  openai_tools.py  testing.py
backend/slack_agent/: slack_agent.py  slack_debug.py  slack_start.py
frontend/: drizzle.config.ts  lefthook.yml  package.json  svelte.config.js  tailwind.config.ts
frontend/src/: app.css  app.d.ts  hooks.server.ts
(+53 files in other folders)
